--- a/sp/src/index.css
+++ b/sp/src/index.css
@@ -18,8 +18,8 @@ body {
 
 header {
     display: flex;
-    width: 35%;
-    margin: 4em auto 0;
+    max-width: 30%;
+    margin: 7em auto 0;
     align-items: center;
     background: #21222A;
     padding: .7em 0;
@@ -42,16 +42,19 @@ header {
 /* Main component */
 
 main {
-    width: 35%;
-    margin-left: 32.5%;
+    width: 30%;
+    margin-left: 35%;
     position: absolute;
     z-index: 1;
     background: #282D35;
     padding: 1em;
-    height: 70vh;
+    height: 55vh;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
     box-shadow: .5em .5em .5em 0;
+    background-image: url('./react-bg-img.png');
+    background-repeat: no-repeat;
+    background-position: 99.9% 50%;
 }
 
 .main-title {
@@ -60,24 +63,14 @@ main {
     margin: 1em 0;
 }
 
-ul {
-
-}
-
 li {
     margin: 1em 6em 0 0;
+    text-decoration: underline;
+    line-height: 1.2;
 }
 
 li::marker {
     color: #61DAFB;
     font-size: 20px;
-}
-
-.react-img-background {
-    z-index: -1;
-    width: 263px;
-    position: absolute;
-    top: 0;
-    left: 56%;
 }
 
