--- a/sp/src/index.css
+++ b/sp/src/index.css
@@ -9,6 +9,10 @@
 /* Body settings */ 
 
 body {
+    display: flex;
+    margin-top: 12em;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     background: #40E0D0;
     color: #FFF;
@@ -18,59 +22,45 @@ body {
 
 header {
     display: flex;
-    max-width: 30%;
-    margin: 7em auto 0;
+    width: 525px;
+    gap: .2em;
     align-items: center;
     background: #21222A;
-    padding: .7em 0;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    box-shadow: .5em .5em .5em 0;
+    color: #00D8FF;
+    padding: 1em 1.2em;
 }
 
 .header-react-logo {
-    margin: 1em .3em 1em 1em;
-    width: 40px;
+    width: 50px;
 }
 
 .header-title {
-    color: #61DAFB;
-    font-weight: bold;
     font-size: 1.4rem;
 }
 
 /* Main component */
 
 main {
-    width: 30%;
-    margin-left: 35%;
-    position: absolute;
-    z-index: 1;
+    height: 430px;
     background: #282D35;
-    padding: 1em;
-    height: 55vh;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    box-shadow: .5em .5em .5em 0;
+    padding: 1em 1.2em;
     background-image: url('./react-bg-img.png');
     background-repeat: no-repeat;
     background-position: 99.9% 50%;
 }
 
 .main-title {
-    font-size: 2.4rem;
-    font-weight: bold;
     margin: 1em 0;
+    font-size: 2.4rem;
 }
 
+
 li {
-    margin: 1em 6em 0 0;
-    text-decoration: underline;
-    line-height: 1.2;
+    width: 350px;
+    margin: 1em 0;
 }
 
 li::marker {
     color: #61DAFB;
-    font-size: 20px;
+    font-size: 1.4rem;
 }
-
